Correct year column, update table spacing and README

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+    .table-spacing {
+        padding: 0 15px 0 15px;
+    }
+}
 /*
 
 @layer components {
